style: fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // overflow-x: hidden;
   // border: 1px solid red !important;
 }
 body {
@@ -11,6 +10,8 @@ body {
   color: #434343;
   background-color: #f5f5f5;
   width: 100vw;
+  overflow-x: hidden;
+  //
 }
 .App {
   width: auto;
